Fixed alignment on index.html
Fixed alignment on index.html

--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -60,7 +60,7 @@ html, body {
     height: 38.7%;
   }
   .module {
-    width: 19.25%;
+    width: 161px;
     float: left;
     margin-left: 6%;
     margin-right: 6%;
@@ -69,7 +69,7 @@ html, body {
   }
   .module p {
     display: none;
-    font-size: 12px;
+    font-size: 11px;
     margin-bottom: 0px;
   }
   .module:hover p {
@@ -130,7 +130,7 @@ h2 {
   margin: 0;
 }
 input#mce-EMAIL {
-  width: 47.1%;
+  width: 40.1%;
   height: 28px;
   border-style: none;
 }
@@ -186,6 +186,7 @@ a {
   background-color: #F2F2F2;
   margin-left: auto;
   margin-right: auto;
+  max-width: 800px;
 }
 .clear {
   clear: both;
@@ -205,7 +206,7 @@ a {
   display: block;
 }
 .module p {
-  font-size: 12px;
+  font-size: 11px;
 }
 /* RECEIVE */
 .fa.fa-tint.fa-4x {
